VR: Restore color animation on URL bar

The URL bar color should animate when switching to and from incognito
mode.

BUG=836236
R=asimjour

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: I4bd0eda60d5bc0852dfc739e5fd20c5b6c970291
Reviewed-on: https://chromium-review.googlesource.com/1025955
Reviewed-by: Amirhossein Simjour <asimjour@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553184}
Former-commit-id: 9c8cc09911157bb9e6b29b07fa5666c0dbf96ca8